Fix Dark Mode button issue of index page

--- a/css/index.css
+++ b/css/index.css
@@ -44,6 +44,7 @@ body {
   bottom: 0;
   right: 0;
   margin: 30px;
+  z-index: 20;
 }
 
 .flex-col {
